loopdowhile.Poucet2.scala.error
Compilation error:
Poucet2:5: error: 'while' expected but 'do' found.
do {
^Poucet2:19: error: '(' expected but '}' found.
	}
        ^