loopdowhile.Poucet2.scala.code
var step = 0;
do{
  
}
do {
  forward()
  if(isOverBaggle()){
   step = step + 1
  }
while  (!exitReached()){
  if (step < 3){
    right()
  }else {
    left()
  }
}
}while (!crossing())